# paper-agent

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agentic_rag/: __init__.py
docs/: architecture.md  configuration.md  development.md  migration.md  project-structure.md
eval/: __init__.py  evaluate.py  golden_dataset.jsonl  golden_dataset_v2.jsonl  judges.py  report_template.md.j2
legacy/project/: README.legacy.md  app.py  config.py
project/: .env.example  README.md  app.py  config.py  document_chunker.py  utils.py
project/core/: chat_interface.py  document_manager.py  embedding_factory.py  llm_factory.py  observability.py  rag_system.py  workspace_memory.py
project/db/: parent_store_manager.py  vector_db_manager.py
project/parsers/: __init__.py  adapters.py
project/rag_agent/: __init__.py  edges.py  graph.py  graph_state.py  nodes.py  prompts.py  retriever_policy.py  schemas.py  tools.py
project/ui/: css.py  gradio_app.py
src/agentic_rag/: __init__.py  app.py  bootstrap.py  cli.py  document_chunker.py  observability.py  settings.py
tests/integration/: test_chat_flow.py  test_ingestion_and_eval.py  test_legacy_compatibility.py  test_runtime_layout.py
tests/unit/: test_app_lock.py  test_document_chunker.py  test_eval_judges.py  test_evidence_retriever.py  test_formula_refinement_service.py  test_graph_quality_closure.py  test_ids.py  test_model_factories.py  test_p1_nodes.py  test_parent_store.py  test_parser_factory.py  test_query_alias_resolution.py  test_reranker_factory.py  test_retriever_policy.py  (+5 more)
(+33 files in other folders)
